// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotificationList /> renders correctly children 1`] = `
<div
  className="talixo-notification-list talixo-notification-list--start talixo-notification-list--bottom"
>
  <div
    className="talixo-notification-list__wrapper"
  >
    <TransitionGroup
      childFactory={[Function]}
      className="talixo-notification-list__content"
      component="div"
    >
      <Fade
        key="2"
      >
        <Notification
          onClose={[Function]}
          type="error"
        >
          Notification 1
        </Notification>
      </Fade>
      <Fade
        key="3"
      >
        <Notification
          onClose={[Function]}
        >
          Notification 2
        </Notification>
      </Fade>
      <Fade
        key="4"
      >
        <Notification
          id="10"
          onClose={[Function]}
          type="success"
        >
          Notification 3
        </Notification>
      </Fade>
    </TransitionGroup>
  </div>
</div>
`;

exports[`<NotificationList /> renders correctly one child 1`] = `
<div
  className="talixo-notification-list talixo-notification-list--start talixo-notification-list--bottom"
>
  <div
    className="talixo-notification-list__wrapper"
  >
    <TransitionGroup
      childFactory={[Function]}
      className="talixo-notification-list__content"
      component="div"
    />
  </div>
</div>
`;
